[gd_scene load_steps=9 format=3 uid="uid://bhh6mxnugnafv"]

[ext_resource type="Script" path="res://player/player.gd" id="1_7bh54"]
[ext_resource type="PackedScene" uid="uid://eiursmsmewhg" path="res://weapons/pistol/pistol.tscn" id="2_yk7sy"]
[ext_resource type="AudioStream" uid="uid://bg4y26w2kd5w0" path="res://weapons/hit_sound.wav" id="4_58asu"]
[ext_resource type="PackedScene" uid="uid://b7msux5xe4l7b" path="res://weapons/rifle/rifle.tscn" id="4_fpqvo"]
[ext_resource type="PackedScene" uid="uid://x1f0w4nlle58" path="res://player/footstep_sound_player.tscn" id="5_xq6ks"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y23fa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q0k1g"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ei8rd"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_7bh54")
spawn_weapon_scenes = Array[PackedScene]([ExtResource("2_yk7sy"), ExtResource("4_fpqvo")])

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_y23fa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_q0k1g")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49995, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 3

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.16797, 0)
text = "Test Name"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ei8rd")

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45095, 0)
stream = ExtResource("4_58asu")
volume_db = -45.0

[node name="FootstepSound" parent="." instance=ExtResource("5_xq6ks")]
doppler_tracking = 1
